--- a/Index.css
+++ b/Index.css
@@ -1,8 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&display=swap');
 * {
     margin: 0;
     padding: 0;
     display: block;
+    font-family: "Dokdo", system-ui;
 
 }
 
