--- a/index.css
+++ b/index.css
@@ -10,11 +10,11 @@
 
 header{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 2fr 3fr 2fr;
     height: 120px;
-    background-color: lightgoldenrodyellow;
+    background-color: #d4950bba;
     font-size: 40px;
-    opacity: 20%;
+    opacity: 70%;
 }
 
 .soldat_knapp_container{
