--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dokdo&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +9,7 @@
 
 }
 
-header{
+header {
     display: grid;
     grid-template-columns: 2fr 3fr 2fr;
     height: 120px;
@@ -17,19 +18,25 @@ header{
     opacity: 70%;
 }
 
-.soldat_knapp_container{
+.soldat_knapp_container {
     background-color: yellow;
     opacity: 50%;
 }
 
-p{
+p {
     display: flex;
     justify-content: center;
 }
 
-body{
+#timer {
+    display: flex;
+    justify-content: center;
+}
+
+body {
     background-image: url(bilder/Wild_West.png);
-	background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
-    z-index: 1; /**denne funker ikkke enda, har position static, vet ikke hvorfor burde spørre rasmus**/
+    z-index: 1;
+    /**denne funker ikkke enda, har position static, vet ikke hvorfor burde spørre rasmus**/
 }
