--- a/index.css
+++ b/index.css
@@ -33,3 +33,7 @@ body{
     background-size: cover;
     z-index: 1; /**denne funker ikkke enda, har position static, vet ikke hvorfor burde spørre rasmus**/
 }
+
+main{
+    height: 500px;
+}
