--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ p {
 
 
 main{
+    width: 100%;
     height: 550px;
     display: flex;
     justify-content: space-between;
@@ -48,6 +49,7 @@ main{
 }
 
 body {
+    height: 100vh;
     background-image: url(bilder/Wild_West.png);
     background-repeat: no-repeat;
     background-size: cover;
