--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
 header {
     position: fixed;
     display: grid;
+    width: 100%;
     grid-template-columns: 2fr 3fr 2fr;
     height: 120px;
     background-color: #d4950bba;
@@ -56,6 +57,7 @@ main{
 
 body {
     height: 100vh;
+    width: 200%;
     background-image: url(bilder/Wild_West.png);
     background-repeat: no-repeat;
     background-size: cover;
