--- a/index.css
+++ b/index.css
@@ -63,3 +63,8 @@ body {
     background-size: cover;
     /**denne funker ikkke enda, har position static, vet ikke hvorfor burde spørre rasmus**/
 }
+#soldat_1_knapp {
+    height: 120px;
+    width:25%;
+    background-color: #ffd0009f;
+}
