--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ header {
     display: flex;
 }
 header img {
-    height: 110;
+    height: 110px;
     width: 100%;
 }
 
@@ -45,7 +45,7 @@ p {
     justify-content: center;
 }
 
-img {
+main img {
     height: 400px ;
     width: 200px;
     padding-top: 50px;
