--- a/index.css
+++ b/index.css
@@ -83,8 +83,12 @@ button {
     width: 184px;
 }
 .jokkis {
-    height: 100px;
-    width: 70px;
+    height: 150px;
+    width: 56px;
+}
+.trym {
+    height: 210px;
+    width: 80px;
 }
 
 /** Midlertidig**/
