--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ header {
 
 #gap_container{
     border: 2px black solid;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .soldat_knapp_container {
@@ -93,4 +97,8 @@ button {
     height: 20px;
     width:15%;
     font-size: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
 }
