--- a/index.css
+++ b/index.css
@@ -48,6 +48,11 @@ header img {
     height: 110px;
     width: 100%;
 }
+.penger p{
+    display: flex;
+    align-items: flex-end;
+    margin: 0 auto;
+}
 
 p {
     display: flex;
