--- a/index.css
+++ b/index.css
@@ -68,12 +68,13 @@ main img {
     height: 400px ;
     width: 200px;
     padding-top: 50px;
+    margin-bottom: 100px;
 }
 
 
 main{
     width: 100%;
-    height: 650px;
+    height: 100vh;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -108,9 +109,10 @@ body {
 /** Midlertidig**/
 
 .litenknapp {
-    height: 400px;
-    width: 65%;
-    font-size: 85px;
+    position: fixed;
+    height:60vh;
+    width: 60%;
+    font-size: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -119,4 +121,6 @@ body {
     border: 5px solid darkgoldenrod;
     border-radius: 20px;
     cursor: pointer;
+    margin-bottom: 100px;
+    left: 20%;
 }
