--- a/index.css
+++ b/index.css
@@ -31,12 +31,14 @@ header {
 
 .soldat_knapp_container {
     background-color: #ffff0057;
-    opacity: 50%;
     border: 2px black solid;
     display: flex;
-    opacity: 100%;
+
 }
 
+.soldat_knapp_container button {
+    width: 7.14vw;
+}
 .penger{
     display: flex;
     height: 60px;
