--- a/index.css
+++ b/index.css
@@ -174,6 +174,6 @@ canvas {
     border: 10px solid black;
     margin: 0px;
     margin-bottom: 110px;
-    width: 1400;
+    width: 1400px;
     height: 400px
 }
